kustomizations/services/temporal/web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-web
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: temporal
      containers:
        - name: temporal-web
          image: "temporalio/ui:latest"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 100Mi
