kustomizations/services/temporal/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-web
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
